--- a/index.html
+++ b/index.html
@@ -11,12 +11,42 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <script src="src/app.js"></script>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="Clear"
+            />
+            12°C | °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/snowmancindy/vanilla-weather-app"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Cindy Xu
+      </small>
     </div>
+    <script src="src/app.js"></script>
   </body>
 </html>
