--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                   alt="Clear"
                   class="float-left"
                 />
-                <span class="float-left">
+                <div class="float-left">
                   <strong>12</strong
                   ><span class="units"
                     >°C | <a href="#" class="fahrenheit">°F</a></span
                   >
-                </span>
+                </div>
               </div>
             </div>
             <div class="col-6">
