--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="float-left">
                   <strong id="temperature"></strong
                   ><span class="units"
-                    >°C | <a href="#" class="fahrenheit">°F</a></span
+                    ><a href="#" class="celsius active" id="celsius-link">°C</a> | <a href="#" class="fahrenheit" id="fahrenheit-link">°F</a></span
                   >
                 </div>
               </div>
