--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
               </ul>
             </div>
           </div>
+          <div class="forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="forecast-date">Thu</div>
+                <img src="https://openweathermap.org/img/wn/01d@2x.png" alt="" width="42" />
+                <div class="forecast-temperature">
+                  <span class="forecast-max">18°</span>
+                  <span class="forecast-min">12°</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
