Added forecast javascript

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </ul>
             </div>
           </div>
-          <div class="forecast">
+          <div class="forecast" id="forecast">
             <div class="row">
               <div class="col-2">
                 <div class="forecast-date">Thu</div>
